<resources>
    <string name="app_name">FreeSmartGym</string>
    <string name="smart_gym">SmartGym</string>
    <string name="c_y_d">catch your dream</string>
    <string name="dive_in">Touch the screen to Dive In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="fat_percent">*Fat Percent:</string>
    <string name="cm">Cm</string>
    <string name="kg">Kg</string>
    <string name="next">Next</string>
    <string name="age">Age:</string>
    <string name="optimal">*optimal</string>
    <string name="about">About,</string>
    <string name="fat_percent2">Fat Percent:</string>
    <string name="calc">Calculate</string>
    <string name="maintenance">Your Maintenance Calories</string>
    <string name="per_day" >calories per day</string>
    <string name="per_week">calories per week</string>
    <string name="activity">Activity:</string>
    <string name="bmi">Your BMI Score</string>
    <string name="mmP">Maximum Muscural Potential</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex:</string>

    <string-array name="activities">
        <item>Basal Metabolic Rate</item>
        <item>Sedentary</item>
        <item>Light Exercise</item>
        <item>Moderate Exercise</item>
        <item>Heavy Exercise</item>
        <item>Athlete</item>
    </string-array>
</resources>
